==================
### 1.3.4 (beta)
==================

Hopefully the last beta.

Bug fixes:
- Fixed shopAuto_open timing problems with sitAuto (also changed ai_shop
  timeout).
- Option to teleport when stuck.
- Fix crash when you trying to (un)equip a nonexistant item.
- Fixed command "timeout" not displaying the current timeout.
- Fixed AI not suspending, when playing manually in XKore mode.
- Fixed XKore sending commands before map was loaded completely
  (fixes empty inventory or skilllist with eAthena servers).
- Made motion not stop 3 steps from goal when crossing maps.
- Fixed bot not reacting to damage during mapRoute calculation.
- The Linux interface's input mode will be correct restored after a resume.
- ai_dealAuto added to timeouts.txt.
- Typing "aiv" during an auto-deal will no longer crash.
- The 'timeout' and 'auth' commands now respect the --control parameter.

New config options:
- teleportAuto_unstuck - teleport when stuck.


==================
### 1.3.3 (beta)
==================

Bug fixes:
- Fixed useSelf_skill. It didn't work in the previous beta because of a typo.
- Fixed party skills; they weren't working because of typos.
- Fixed shopAuto_open flooding console with "A shop has already been opened.".
- Fixed route AI not decreasing step size when stuck

New features:
- 'al', 'testshop' and 'openshop' commands now display the shop title


==================
### 1.3.2 (beta)
==================

NOTES:
- Because of a routing bugfix, portalsLOS.txt will need an update. It's
  recommended that you do one of the following things:
  * Download the latest tablepack, and extract portalsLOS.txt into your
    tables folder.
  - OR -
  * Delete your portalsLOS.txt and let Kore recompile it.
- Shop.txt format has changed! See below.
- Syntax of the console command "conf" has changed! See below.
- The attack routing behavior has changed. It's recommended that you
  lower your attackDistance to 1.5.

Bugs:
- attackAuto_onlyWhenSafe doesn't work.
