@@ -27,7 +27,7 @@ use base qw(Exporter);
 our %EXPORT_TAGS = (
 	config  => [qw(%config %consoleColors %equipTypes_lut %items_lut %itemSlotCount_lut %itemsDesc_lut %itemTypes_lut %jobs_lut %maps_lut %cities_lut %npcs_lut %portals_lut %sex_lut %shop %skills_lut %skills_rlut %skillsID_lut %skillsID_rlut %skillsDesc_lut %skillsLooks %skillsArea %skillsSP_lut %timeout $char)],
 	ai      => [qw(@ai_seq @ai_seq_args %ai_v $AI $AI_forcedOff %targetTimeout)],
-	state   => [qw($accountID @chars %cart %field @itemsID %items @monstersID %monsters @npcsID %npcs @playersID %players @portalsID %portals @storeList $currentChatRoom @currentChatRoomUsers @chatRoomsID %chatRooms @skillsID %storage @storageID)],
+	state   => [qw($accountID @chars %cart %field @itemsID %items @monstersID %monsters @npcsID %npcs @playersID %players @portalsID %portals @storeList $currentChatRoom @currentChatRoomUsers @chatRoomsID %chatRooms @skillsID %storage @storageID @arrowCraftID)],
 	network => [qw($remote_socket $conState $encryptVal $lastPacketTime)],
 	interface => [qw($interface)],
 	misc    => [qw($buildType $quit %timeout_ex $isOnline $shopstarted $dmgpsec $totalelasped $elasped $totaldmg %overallAuth)],
@@ -145,6 +145,7 @@ our %chatRooms;
 our @skillsID;
 our %storage;
 our @storageID;
+our @arrowCraftID;
 
 # Network
 our $remote_socket;
